--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "@angular/cli": "~13.3.6",
     "@angular/compiler-cli": "~13.3.0",
     "@briebug/jest-schematic": "^4.0.0",
-    "@types/jest": "27.0.0",
+    "@types/jest": "latest",
     "@types/node": "^12.11.1",
-    "jest": "27.0.0",
+    "jest": "latest",
     "typescript": "~4.6.2"
   }
 }
